[gd_scene load_steps=16 format=2]

[ext_resource path="res://weapons/fire.png" type="Texture" id=1]
[ext_resource path="res://weapons/Fireball.gd" type="Script" id=2]
[ext_resource path="res://nodes/HitBox.gd" type="Script" id=3]
[ext_resource path="res://addons/gdquest_visualization_tools/2d/DebugCollisionShape2D.gd" type="Script" id=4]
[ext_resource path="res://addons/gdquest_visualization_tools/2d/shaders/Shape2D.tres" type="Shader" id=5]
[ext_resource path="res://weapons/particle_bullet.png" type="Texture" id=6]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.133333, 0.283333, 0.74, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.992188, 1, 0, 1, 1, 0.304688, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 1 ), 0.0, 0.74375, 0, 0, Vector2( 1, 0.0147727 ), -3.70909, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 6.99
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 432.75
angular_velocity = 92.63
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 23.39
scale = 4.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 12 )
hue_variation = 1.0

[sub_resource type="ShaderMaterial" id=19]
shader = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=1]
radius = 226.035

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=18]
radius = 30.2655

[node name="Fireball" type="Node2D"]
script = ExtResource( 2 )
lifetime = 5.0

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="ExplosionParticles" type="Particles2D" parent="."]
emitting = false
amount = 100
lifetime = 0.6
one_shot = true
speed_scale = 2.0
explosiveness = 0.6
process_material = SubResource( 15 )
texture = ExtResource( 6 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
self_modulate = Color( 0.376471, 0.376471, 0.439216, 1 )
material = SubResource( 19 )
shape = SubResource( 1 )
disabled = true
script = ExtResource( 4 )
palette = 6
theme = 0
theme_width = 4
theme_sample = 24

[node name="ImpactDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactDetector"]
modulate = Color( 0, 0.0627451, 1, 0.415686 )
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
material = SubResource( 20 )
rotation = -0.00256297
shape = SubResource( 18 )
script = ExtResource( 4 )
palette = 0
theme = 0
theme_width = 4
theme_sample = 24

[node name="Timer" type="Timer" parent="."]
one_shot = true
